--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
 				</h3>
 				<p>Self Hosting located in Philippines.</p>
 				<p class="copy">&copy; 2024</p>
+				<a class="nav-link" href="https://www.facebook.com/sanda.itama">CEO | Jhon Lester Lagaras</a>
+				<a class="nav-link" href="https://www.facebook.com/jasminerose.carillo">SHAREHOLDER | Jasmine Rose Carillo</a>
 			</div>
 		</div>	
 	</div>
