--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 							Client Area
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end dropdown-menu-panel" aria-labelledby="panel">
-							<a class="dropdown-item" href="https://client.ahjin.shop/home">									
+							<a class="dropdown-item" href="https://client.ahjin.shop:7443/home">									
 								Client Area <span class="d-block">Billing &amp; Support</span>
 							</a>
-							<a class="dropdown-item" href="https://panel.ahjin.online:8443/">									
+							<a class="dropdown-item" href="https://panel.ahjin.online:9443/">									
 								Game Panel <span class="d-block">Game Management</span>
 							</a>
 						</ul>
@@ -229,8 +229,7 @@
 				</h3>
 				<p>Self Hosting located in Philippines.</p>
 				<p class="copy">&copy; 2024</p>
-				<a class="nav-link" href="https://www.facebook.com/sanda.itama">CEO | Jhon Lester Lagaras</a>
-				<a class="nav-link" href="https://www.facebook.com/jasminerose.carillo">SHAREHOLDER | Jasmine Rose Carillo</a>
+				<li><a href="https://www.facebook.com/sanda.itama">CEO | Jhon Lester Lagaras</a></li>
 			</div>
 		</div>	
 	</div>
