--- a/minecraft.html
+++ b/minecraft.html
@@ -5,7 +5,7 @@
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Minecraft | AhjinHosting</title>
-	<link rel="icon" href="assets/images/logo1.png" type="image/svg+xml">
+	<link rel="icon" href="assets/images/ah_mini-nobg.png" type="image/svg+xml">
 	<!-- SEO -->
 	<meta property="og:site_name" content="">
 	<meta property="og:title" content="">
@@ -43,7 +43,7 @@
 <nav id="navbar_top" class="navbar navbar-dark navbar-expand-lg fixed-top">
 		<div class="container-fluid container-custom">
 		<a class="navbar-brand" href="index.html">
-			<img class="img-fluid" src="assets/images/logo1.png" alt="AhjinHosting Logo">
+			<img class="img-fluid" src="assets/images/ah_mini-nobg.png" alt="AhjinHosting Logo">
 			Ahjin<span>Hosting</span>
 		</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dinoNavbar" aria-controls="dinoNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -346,7 +346,6 @@
 				<div class="col-md-7">
 					<div class="panel_content">
 						<h2>Powerful Controlpanel</h2>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vero molestias explicabo, id maxime laboriosam, ab, rem, debitis est voluptatibus facilis? Hic aperiam dolorum ab tempora corrupti, beatae architecto voluptatem!</p>
 						<ul>
 							<li><i class="fas fa-check-circle"></i> Easy To Use</li>
 							<li><i class="fas fa-check-circle"></i> Fast And Secured big anti ddos </li>
