--- a/minecraft.html
+++ b/minecraft.html
@@ -115,7 +115,7 @@
             							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						</div>
             					</div>
             				</div>
@@ -138,7 +138,7 @@
             							<li><i class="fad fa-chart-network"></i>2x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						</div>
             					</div>
             				</div>
@@ -161,7 +161,7 @@
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						</div>
             					</div>
             				</div>
@@ -184,7 +184,7 @@
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						
             						</div>
             					</div>
@@ -213,7 +213,7 @@
             							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						</div>
             					</div>
             				</div>
@@ -236,7 +236,7 @@
             							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						</div>
             					</div>
             				</div>
@@ -259,7 +259,7 @@
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						</div>
             					</div>
             				</div>
@@ -282,7 +282,7 @@
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
-            							<a href="https://discord.gg/n6ZUSvht" class="btn">Order now</a>
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
             						</div>
             					</div>
             				</div>
