--- a/minecraft.html
+++ b/minecraft.html
@@ -166,26 +166,71 @@
             					</div>
             				</div>
             			</div>
-            			<div class="col-lg-4 col-md-0">
+						<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Intel Xeon</h2>
-								<h2 class="mb-0">DDR3 ECC 1866MHz RAM</h2>
+            					<h2 class="mb-0">Ryzen 5 5600G</h2>
+								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
             						<h2 class="mb-0">Plan Four</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 395 / <span>month</span>
+            						PHP 300 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
-            							<li><i class="fad fa-memory"></i> 8GB DDR3</li>
-            							<li><i class="fad fa-hdd"></i> 30GB DISK</li>
+            							<li><i class="fad fa-memory"></i> 4GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 20GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 250% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+						<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Ryzen 5 5600G</h2>
+								<h2 class="mb-0">DDR4 RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Five</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 500 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 6GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 25GB DISK</li>
             							<li><i class="fad fa-microchip"></i> 300% CPU</li>
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
             							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
-            						
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Ryzen 5 5600G</h2>
+								<h2 class="mb-0">DDR4 RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Six</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 700 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 8GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 30GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 350% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>         						
             						</div>
             					</div>
             				</div>
@@ -197,19 +242,19 @@
             		<div class="row">
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">AMD Ryzen5</h2>
-								<h2 class="mb-0"> DDR4 ECC 2300MHz RAM</h2>
+            					<h2 class="mb-0"> Ryzen 9 5900X</h2>
+								<h2 class="mb-0"> DDR4 RAM</h2>
             					<div class="card-header py-">
             						<h2 class="mb-0">Plan One</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 450 / <span>month</span>
+            						PHP 594 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
             							<li><i class="fad fa-memory"></i> 6GB DDR4</li>
-            							<li><i class="fad fa-hdd"></i> 20GB DISK</li>
-            							<li><i class="fad fa-microchip"></i> 300% CPU</li>
+            							<li><i class="fad fa-hdd"></i> 30GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 200% CPU</li>
             							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
             						</ul>
             						<div class="mt-4">
@@ -218,21 +263,21 @@
             					</div>
             				</div>
             			</div>
-            			<div class="col-lg-4 col-md-0">
+						<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">AMD Ryzen5</h2>
-								<h2 class="mb-0"> DDR4 ECC 2300MHz RAM</h2>
+            					<h2 class="mb-0">Ryzen 9 5900X</h2>
+								<h2 class="mb-0"> DDR4 RAM</h2>
             					<div class="card-header py-">
             						<h2 class="mb-0">Plan Two</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 550 / <span>month</span>
+            						PHP 792 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
-            							<li><i class="fad fa-memory"></i> 9GB DDR4</li>
-            							<li><i class="fad fa-hdd"></i> 25GB DISK</li>
-            							<li><i class="fad fa-microchip"></i> 300% CPU</li>
+            							<li><i class="fad fa-memory"></i> 8GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 35GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 250% CPU</li>
             							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
             						</ul>
             						<div class="mt-4">
@@ -243,18 +288,41 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">AMD Ryzen5</h2>
-								<h2 class="mb-0"> DDR4 ECC 2300MHz RAM</h2>
+            					<h2 class="mb-0">Ryzen 9 5900X</h2>
+								<h2 class="mb-0"> DDR4 RAM</h2>
             					<div class="card-header py-">
             						<h2 class="mb-0">Plan Three</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 700 / <span>month</span>
+            						PHP 990 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 10GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 40GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 300% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Ryzen 9 5900X</h2>
+								<h2 class="mb-0"> DDR4 RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Four</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 1,188 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
             							<li><i class="fad fa-memory"></i> 12GB DDR4</li>
-            							<li><i class="fad fa-hdd"></i> 30GB DISK</li>
+            							<li><i class="fad fa-hdd"></i> 45GB DISK</li>
             							<li><i class="fad fa-microchip"></i> 350% CPU</li>
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
@@ -266,19 +334,42 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">AMD Ryzen5</h2>
-								<h2 class="mb-0"> DDR4 ECC 2300MHz RAM</h2>
+            					<h2 class="mb-0">Ryzen 9 5900X</h2>
+								<h2 class="mb-0"> DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Four</h2>
+            						<h2 class="mb-0">Plan Five</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 900 / <span>month</span>
+            						PHP 1,386 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
             							<li><i class="fad fa-memory"></i> 14GB DDR4</li>
-            							<li><i class="fad fa-hdd"></i> 35GB NVMe SSD</li>
-            							<li><i class="fad fa-microchip"></i> 400% CPU</li>
+            							<li><i class="fad fa-hdd"></i> 45GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 350% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Ryzen 9 5900X</h2>
+								<h2 class="mb-0"> DDR4 RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Six</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 1,584 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 16GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 50GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 450% CPU</li>
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
