--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 					Ahjin<span class="blue">Hosting</span>
 				</h3>
 				<p>Self Hosting located in Philippines.</p>
-				<p class="copy">&copy; 2024</p>
+				<p class="copy">&copy; 2024 - 2025</p>
 				<li><a href="https://www.facebook.com/sanda.itama">CEO | Jhon Lester Lagaras</a></li>
 			</div>
 		</div>	
