--- a/minecraft.html
+++ b/minecraft.html
@@ -174,7 +174,7 @@
             						<h2 class="mb-0">Plan Four</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 300 / <span>month</span>
+            						PHP 380 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -197,7 +197,7 @@
             						<h2 class="mb-0">Plan Five</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 500 / <span>month</span>
+            						PHP 570 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -220,13 +220,82 @@
             						<h2 class="mb-0">Plan Six</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 700 / <span>month</span>
+            						PHP 760 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
             							<li><i class="fad fa-memory"></i> 8GB DDR4</li>
             							<li><i class="fad fa-hdd"></i> 30GB DISK</li>
             							<li><i class="fad fa-microchip"></i> 350% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+						<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Ryzen 5 5600G</h2>
+								<h2 class="mb-0">DDR4 RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Seven</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 1,140 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 12GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 40GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 400% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+						<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Ryzen 5 5600G</h2>
+								<h2 class="mb-0">DDR4 RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Eight</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 1,520 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 16GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 50GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 450% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Ryzen 5 5600G</h2>
+								<h2 class="mb-0">DDR4 RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Nine</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 2,280 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 24GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 60GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 500% CPU</li>
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
@@ -248,7 +317,7 @@
             						<h2 class="mb-0">Plan One</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 594 / <span>month</span>
+            						PHP 600 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -271,7 +340,7 @@
             						<h2 class="mb-0">Plan Two</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 792 / <span>month</span>
+            						PHP 800 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -294,7 +363,7 @@
             						<h2 class="mb-0">Plan Three</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 990 / <span>month</span>
+            						PHP 1,000 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -317,7 +386,7 @@
             						<h2 class="mb-0">Plan Four</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 1,188 / <span>month</span>
+            						PHP 1,200 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -340,7 +409,7 @@
             						<h2 class="mb-0">Plan Five</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 1,386 / <span>month</span>
+            						PHP 1,400 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -363,7 +432,7 @@
             						<h2 class="mb-0">Plan Six</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 1,584 / <span>month</span>
+            						PHP 1,600 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
