--- a/minecraft.html
+++ b/minecraft.html
@@ -105,14 +105,14 @@
             						<h2 class="mb-0">Plan One</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 140 / <span>month</span>
+            						PHP 120 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
-            							<li><i class="fad fa-memory"></i> 4GB DDR3</li>
-            							<li><i class="fad fa-hdd"></i> 15GB DISK</li>
-            							<li><i class="fad fa-microchip"></i> 150% CPU</li>
-            							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
+            							<li><i class="fad fa-memory"></i> 2GB DDR3</li>
+            							<li><i class="fad fa-hdd"></i> 10GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 100% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 1x BACK UP</li>
             						</ul>
             						<div class="mt-4">
             							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
@@ -128,14 +128,14 @@
             						<h2 class="mb-0">Plan Two</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 220 / <span>month</span>
+            						PHP 240 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
-            							<li><i class="fad fa-memory"></i> 5GB DDR3</li>
-            							<li><i class="fad fa-hdd"></i> 20GB DISK</li>
-            							<li><i class="fad fa-microchip"></i> 200% CPU</li>
-            							<li><i class="fad fa-chart-network"></i>2x BACK UP</li>
+            							<li><i class="fad fa-memory"></i> 4GB DDR3</li>
+            							<li><i class="fad fa-hdd"></i> 15GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 150% CPU</li>
+            							<li><i class="fad fa-chart-network"></i>1x BACK UP</li>
             						</ul>
             						<div class="mt-4">
             							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
@@ -151,13 +151,82 @@
             						<h2 class="mb-0">Plan Three</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 305 / <span>month</span>
+            						PHP 360 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
-            							<li><i class="fad fa-memory"></i> 7GB DDR3</li>
+            							<li><i class="fad fa-memory"></i> 6GB DDR3</li>
+            							<li><i class="fad fa-hdd"></i> 20GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 200% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+						<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Intel Xeon</h2>
+								<h2 class="mb-0">DDR3 ECC 1866MHz RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Four</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 480 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 8GB DDR3</li>
             							<li><i class="fad fa-hdd"></i> 25GB DISK</li>
             							<li><i class="fad fa-microchip"></i> 250% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 2x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Intel Xeon</h2>
+								<h2 class="mb-0">DDR3 ECC 1866MHz RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Five</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 600 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 10GB DDR3</li>
+            							<li><i class="fad fa-hdd"></i> 30GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 300% CPU</li>
+            							<li><i class="fad fa-chart-network"></i>3x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://www.facebook.com/profile.php?id=61570282738011" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<h2 class="mb-0">Intel Xeon</h2>
+								<h2 class="mb-0">DDR3 ECC 1866MHz RAM</h2>
+            					<div class="card-header py-">
+            						<h2 class="mb-0">Plan Six</h2>
+            					</div>
+            					<div class="card-price py-1">
+            						PHP 720 / <span>month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 12GB DDR3</li>
+            							<li><i class="fad fa-hdd"></i> 35GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 350% CPU</li>
             							<li><i class="fad fa-chart-network"></i> 3x BACK UP</li>
             						</ul>
             						<div class="mt-4">
@@ -171,7 +240,7 @@
             					<h2 class="mb-0">Ryzen 5 5600G</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Four</h2>
+            						<h2 class="mb-0">Plan One</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 380 / <span>month</span>
@@ -194,7 +263,7 @@
             					<h2 class="mb-0">Ryzen 5 5600G</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Five</h2>
+            						<h2 class="mb-0">Plan Two</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 570 / <span>month</span>
@@ -217,7 +286,7 @@
             					<h2 class="mb-0">Ryzen 5 5600G</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Six</h2>
+            						<h2 class="mb-0">Plan Three</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 760 / <span>month</span>
@@ -240,7 +309,7 @@
             					<h2 class="mb-0">Ryzen 5 5600G</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Seven</h2>
+            						<h2 class="mb-0">Plan Four</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,140 / <span>month</span>
@@ -263,7 +332,7 @@
             					<h2 class="mb-0">Ryzen 5 5600G</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Eight</h2>
+            						<h2 class="mb-0">Plan Five</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,520 / <span>month</span>
@@ -286,7 +355,7 @@
             					<h2 class="mb-0">Ryzen 5 5600G</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Nine</h2>
+            						<h2 class="mb-0">Plan Six</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 2,280 / <span>month</span>
