--- a/minecraft.html
+++ b/minecraft.html
@@ -105,7 +105,7 @@
             						<h2 class="mb-0">Plan One</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 120 / <span>month</span>
+            						PHP 90 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -128,7 +128,7 @@
             						<h2 class="mb-0">Plan Two</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 240 / <span>month</span>
+            						PHP 180 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -151,7 +151,7 @@
             						<h2 class="mb-0">Plan Three</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 360 / <span>month</span>
+            						PHP 270 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -174,7 +174,7 @@
             						<h2 class="mb-0">Plan Four</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 480 / <span>month</span>
+            						PHP 360 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -197,7 +197,7 @@
             						<h2 class="mb-0">Plan Five</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 600 / <span>month</span>
+            						PHP 450 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -220,7 +220,7 @@
             						<h2 class="mb-0">Plan Six</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 720 / <span>month</span>
+            						PHP 540 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -243,7 +243,7 @@
             						<h2 class="mb-0">Plan One</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 380 / <span>month</span>
+            						PHP 300 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -266,7 +266,7 @@
             						<h2 class="mb-0">Plan Two</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 570 / <span>month</span>
+            						PHP 450 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -289,7 +289,7 @@
             						<h2 class="mb-0">Plan Three</h2>
             					</div>
             					<div class="card-price py-1">
-            						PHP 760 / <span>month</span>
+            						PHP 600 / <span>month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -309,7 +309,7 @@
             					<h2 class="mb-0">Ryzen 7 2700X</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Four</h2>
+            						<h2 class="mb-0">Plan One</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,140 / <span>month</span>
@@ -332,7 +332,7 @@
             					<h2 class="mb-0">Ryzen 7 2700X</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Five</h2>
+            						<h2 class="mb-0">Plan Two</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,520 / <span>month</span>
@@ -355,7 +355,7 @@
             					<h2 class="mb-0">Ryzen 7 2700X</h2>
 								<h2 class="mb-0">DDR4 RAM</h2>
             					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Six</h2>
+            						<h2 class="mb-0">Plan Three</h2>
             					</div>
             					<div class="card-price py-1">
             						PHP 2,280 / <span>month</span>
