--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 							Client Area
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end dropdown-menu-panel" aria-labelledby="panel">
-							<a class="dropdown-item" href="https://client.ahjin.shop:7443/home">									
+							<a class="dropdown-item" href="https://client.ahjin.shop/">									
 								Client Area <span class="d-block">Billing &amp; Support</span>
 							</a>
-							<a class="dropdown-item" href="https://panel.ahjin.online:9443/">									
+							<a class="dropdown-item" href="https://panel.ahjin.shop/">									
 								Game Panel <span class="d-block">Game Management</span>
 							</a>
 						</ul>
