--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<a class="dropdown-item" href="https://client.ahjin.shop/">									
 								Client Area <span class="d-block">Billing &amp; Support</span>
 							</a>
-							<a class="dropdown-item" href="https://panel.ahjin.shop/">									
+							<a class="dropdown-item" href="https://panel.ahjin.shop:8443/">									
 								Game Panel <span class="d-block">Game Management</span>
 							</a>
 						</ul>
