--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 							Client Area
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end dropdown-menu-panel" aria-labelledby="panel">
-							<a class="dropdown-item" href="https://client.ahjin.shop/">									
+							<a class="dropdown-item" href="https://user.ahjin.shop/">									
 								Client Area <span class="d-block">Billing &amp; Support</span>
 							</a>
-							<a class="dropdown-item" href="https://panel.ahjin.shop:8443/">									
+							<a class="dropdown-item" href="https://game.ahjin.online/">									
 								Game Panel <span class="d-block">Game Management</span>
 							</a>
 						</ul>
@@ -217,7 +217,7 @@
 						<h4>Support</h4>
 						<ul>
 							<li><a href="https://www.facebook.com/profile.php?id=61570282738011">Contact Us</a></li>
-							<li><a href="https://discord.gg/n6ZUSvht">Discord</a></li>
+							<li><a href="https://discord.gg/j96yMqqbeQ">Discord</a></li>
 						</ul>
 					</div>
 				</div>
